k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iplocation-service
spec:
  selector:
    app: iplocation
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
