k8s/iplocation-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iplocation-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iplocation-service
            port:
              number: 80
